fix how values statements show up on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ button {
     margin: 0px;
     text-align: center;
     padding: 0px 30px;
-    min-width: 400px;
+    min-width: 250px;
 }
 
 .values_img {
